--- a/ui/src/components/Navigation/NavigationVariants.html
+++ b/ui/src/components/Navigation/NavigationVariants.html
@@ -10,9 +10,9 @@
     <nav class="navigation">
       <div class="navigation__container">
         <div class="navigation__left">
-          <button class="btn btn--tertiary btn--mini">shop</button>
-          <button class="btn btn--tertiary btn--mini">quality</button>
-          <button class="btn btn--tertiary btn--mini">snif society</button>
+          <button class="btn btn--tertiary btn--small">shop</button>
+          <button class="btn btn--tertiary btn--small">quality</button>
+          <button class="btn btn--tertiary btn--small">snif society</button>
         </div>
         <div class="navigation__center">
           <a href="/" class="navigation__logo-link">
@@ -44,9 +44,9 @@
     <nav class="navigation">
       <div class="navigation__container">
         <div class="navigation__left">
-          <button class="btn btn--tertiary btn--mini">products</button>
-          <button class="btn btn--tertiary btn--mini">about</button>
-          <button class="btn btn--tertiary btn--mini">contact</button>
+          <button class="btn btn--tertiary btn--small">products</button>
+          <button class="btn btn--tertiary btn--small">about</button>
+          <button class="btn btn--tertiary btn--small">contact</button>
         </div>
         <div class="navigation__center">
           <a href="/" class="navigation__logo-link">
@@ -77,9 +77,9 @@
     <nav class="navigation">
       <div class="navigation__container">
         <div class="navigation__left">
-          <button class="btn btn--tertiary btn--mini">home</button>
-          <button class="btn btn--tertiary btn--mini">explore</button>
-          <button class="btn btn--tertiary btn--mini">trending</button>
+          <button class="btn btn--tertiary btn--small">home</button>
+          <button class="btn btn--tertiary btn--small">explore</button>
+          <button class="btn btn--tertiary btn--small">trending</button>
         </div>
         <div class="navigation__center">
           <a href="/" class="navigation__logo-link">
@@ -111,9 +111,9 @@
     <nav class="navigation">
       <div class="navigation__container">
         <div class="navigation__left">
-          <button class="btn btn--tertiary btn--mini">features</button>
-          <button class="btn btn--tertiary btn--mini">pricing</button>
-          <button class="btn btn--tertiary btn--mini">docs</button>
+          <button class="btn btn--tertiary btn--small">features</button>
+          <button class="btn btn--tertiary btn--small">pricing</button>
+          <button class="btn btn--tertiary btn--small">docs</button>
         </div>
         <div class="navigation__center">
           <a href="/" class="navigation__logo-link">
