--- a/ui/src/components/Navigation/NavigationWithImage.html
+++ b/ui/src/components/Navigation/NavigationWithImage.html
@@ -6,9 +6,9 @@
   <div class="navigation__container">
     <!-- Left: Navigation Links -->
     <div class="navigation__left">
-      <button class="btn btn--tertiary btn--mini">shop</button>
-      <button class="btn btn--tertiary btn--mini">quality</button>
-      <button class="btn btn--tertiary btn--mini">snif society</button>
+      <button class="btn btn--tertiary btn--small">shop</button>
+      <button class="btn btn--tertiary btn--small">quality</button>
+      <button class="btn btn--tertiary btn--small">snif society</button>
     </div>
 
     <!-- Center: Logo with Image -->
